--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,7 +15,7 @@ listeners:
     handlers:
       - path: "/reverse"
         reverse_proxy:
-          upstreams: ["http://localhost:8080", "https://example.com:8080"]
+          upstreams: ["http://localhost:8081", "http://localhost:8082", "http://localhost:8083"]
           load_balancing:
             strategy: round_robin
             retries: 3
