--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Verify dependencies
         run: go mod verify
 
-      - name: Install golangci-lint
+      - name: Install and run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
