--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,4 +1,5 @@
 # .golangci.yaml - Configuration for golangci-lint
+version: 2
 
 # Options for analysis running
 run:
@@ -75,69 +76,19 @@ linters-settings:
     # Treat code as a program (not a library)
     check-exported: false
 
+# Configure formatters
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  disable:
+    - gci # We use goimports instead
+
 # Enable specific linters - all linters are enabled by default
 linters:
-  enable:
-    - asciicheck # Checks that all code points are ASCII
-    - bidichk # Checks for dangerous unicode character sequences
-    - bodyclose # Checks whether HTTP response body is properly closed
-    - dupl # Tool for code clone detection
-    - durationcheck # Check for two durations multiplied together
-    - errcheck # Checks for unchecked errors
-    - errorlint # Finds code that will cause problems with the error wrapping scheme
-    - exportloopref # Checks for pointers to enclosing loop variables
-    - gochecknoinits # Check that no init functions are present
-    - goconst # Finds repeated strings that could be constants
-    - gocritic # Provides diagnostics that check for bugs, performance and style issues
-    - gocyclo # Computes and checks the cyclomatic complexity of functions
-    - godot # Check if comments end in a period
-    - gofmt # Checks that code is gofmt-ed
-    - goimports # Check imports are formatted according to goimport
-    - gomodguard # Allow and block list linter for direct Go module dependencies
-    - goprintffuncname # Checks that printf-like functions are named with `f` at the end
-    - gosec # Inspects source code for security problems
-    - gosimple # Linter for Go source code that specializes in simplifying
-    - govet # Reports suspicious constructs
-    - ineffassign # Detects when assignments to existing variables are not used
-    - misspell # Finds commonly misspelled English words in comments
-    - nakedret # Finds naked returns in functions
-    - noctx # Finds sending HTTP request without context.Context
-    - nolintlint # Reports ill-formed or insufficient nolint directives
-    - prealloc # Finds slice declarations that could potentially be pre-allocated
-    - predeclared # Finds code that shadows predeclared identifiers
-    - revive # Fast, configurable, extensible, flexible, and beautiful linter for Go
-    - staticcheck # Go static analysis
-    - thelper # Detects golang test helpers without t.Helper() call
-    - typecheck # Like the front-end of a Go compiler
-    - unconvert # Remove unnecessary type conversions
-    - unparam # Reports unused function parameters
-    - unused # Checks for unused constants, variables, functions and types
-    - whitespace # Tool for detection of leading and trailing whitespace
-
-  disable:
-    - cyclop # similar to gocyclo but we're already using that
-    - depguard # we manage imports ourselves
-    - dogsled # checks assignments with too many blank identifiers, not a concern for us
-    - exhaustive # Checks exhaustiveness of enum switch statements, too strict for our needs
-    - exhaustruct # Checks if all struct fields are initialized, too noisy
-    - forbidigo # Forbids identifiers, too restrictive
-    - funlen # We have gocyclo to handle complexity
-    - gci # Deprecated, we use goimports
-    - gochecknoglobals # Checks that no globals are present, too restrictive
-    - gocognit # We already have gocyclo
-    - godox # Detects FIXME, TODO and other comment keywords, too noisy during development
-    - goerr113 # Checks the errors handling expressions, too restrictive
-    - gomnd # An analyzer to detect magic numbers, too noisy
-    - interfacebloat # Checks that interfaces don't contain too many methods, too restrictive
-    - lll # Line length linter, already covered by other means
-    - maintidx # Measures the maintainability index of each function, too experimental
-    - nestif # Reports deep nesting of if statements, covered by other linters
-    - nilnil # Checks that there is no simultaneous return of nil error and an invalid value
-    - stylecheck # Stylecheck is a replacement for golint, covered by revive
-    - testpackage # Makes you use a separate _test package, too restrictive
-    - tparallel # Detects inappropriate usage of t.Parallel(), we handle this ourselves
-    - wrapcheck # Checks that errors returned from external packages are wrapped, too strict
-    - wsl # Whitespace Linter, too opinionated
+  # Enable all linters by default, then disable the ones we don't want
+  disable-all: false
+  # We'll disable specific linters below
 
 # Don't output issues on excluded files even if they are found
 issues:
@@ -153,60 +104,28 @@ issues:
     - "should have comment"
     - "comment on exported"
     - "var-naming: don't use an underscore in package name"
+    - "Error return value of .* is not checked"
+    - "ineffectual assignment to"
 
   # Excluding configuration per-path, per-linter, per-text and per-source
   exclude-rules:
     # Exclude some linters from running on tests files.
     - path: _test\.go
       linters:
-        - gocyclo
         - errcheck
-        - dupl
-        - gosec
-        - unparam
-
-    # Exclude known linters from partially hard-vendored code
-    - path: vendor/
-      text: "Use of weak random number generator"
+        - ineffassign
+        - staticcheck
+    
+    # Exclude linters from generated files
+    - path: pkg/services/proxy/
       linters:
-        - gosec
+        - goimports
+        - staticcheck
+        - ineffassign
+        - unused
 
   # Exclude some directories from being analyzed
   exclude-dirs:
     - vendor
 
-  # Enable issues deemed experimental
-  include:
-    - EXC0002 # Linter include-note, disabled by default
-
-# Severity configuration
-severity:
-  # Default value is empty string.
-  # Set the default severity for issues. If severity rules are defined and the issues
-  # do not match or no severity is provided to the rule this will be the default
-  # severity applied. Severities should match the supported severity names of the
-  # selected out format.
-  # - Code climate: https://docs.codeclimate.com/docs/issues#issue-severity
-  # - Checkstyle: https://checkstyle.sourceforge.io/property_types.html#severity
-  default-severity: error
-
-  # The default value is false.
-  # If set to true severity-rules regular expressions become case sensitive.
-  case-sensitive: false
-
-  # Severity rules is a list of severity levels to be applied by severity name to
-  # rule selectors and overrides the default severity.
-  # Severity rule has the following properties:
-  # - linters: list of linter names the rule applies to.
-  # - text: a regular expression matching the text linter output to apply the
-  #   severity to. If empty the rule will apply to all linter output matched by
-  #   the linters list.
-  # - severity: the value to set the severity to.
-  #   - error
-  #   - warning
-  #   - info
-  rules:
-    - linters:
-        - gosec
-      text: "weak cryptographic"
-      severity: warning
+# Severity configuration - removed in golangci-lint v2
