--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           version: latest
 
       - name: Run golangci-lint
-        run: golangci-lint run ./...
+        run: golangci-lint run --config .golangci.yaml
 
   build:
     name: Build
